--- a/styles/Quiz.module.css
+++ b/styles/Quiz.module.css
@@ -5,7 +5,7 @@
     text-align: center;
   }
   
-  button {
+  .button {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -16,7 +16,7 @@
     margin: 5px;
   }
   
-  button:hover {
+  .button:hover {
     background-color: #005bb5;
   }
   
