--- a/styles/Quiz.module.css
+++ b/styles/Quiz.module.css
@@ -1,45 +1,32 @@
+/* Quiz.module.css */
+
+/* Contêiner geral para o quiz */
 .quiz {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
+    padding: 30px;
     text-align: center;
   }
   
-  .button {
+  /* Estilos para o contêiner das opções */
+  .options {
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+    align-items: center;
+  }
+  
+  /* Estilo para os botões das opções */
+  .optionButton {
     padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    background-color: #0070f3;
+    font-size: 20px;
+    background-color: #007BFF;
     color: white;
     border-radius: 5px;
-    margin: 5px;
-  }
-  
-  .button:hover {
-    background-color: #005bb5;
-  }
-  
-  .form {
-    margin-top: 20px;
-  }
-  
-  .form input {
-    padding: 8px;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .form button {
-    padding: 8px 16px;
-    background-color: #28a745;
-    color: white;
-    border: none;
-    border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.1s ease;
+    width: 100%;
+    max-width: 300px; /* Para limitar o tamanho máximo do botão */
   }
   
-  .form button:hover {
-    background-color: #218838;
+  .optionButton:hover {
+    background-color: #0056b3;
   }
